--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "9.1.7",
     "@angular/router": "9.1.7",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.0.0-alpha4",
     "jquery": "3.5.1",
     "popper.js": "1.16.1",
     "rxjs": "6.5.5",
